--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuja's Portfolio</title>
+
+    <link rel="stylesheet" href=""style.css>
 </head>
 <body>
-    Hello There!<br>
-    My name is Anuja Thankare<br>
-    I'm new here !!!<br>
+   <header class="header">
+    <a href="#" class="logo">Jacob.</a>
+    <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+   </header>
 </body>
 </html>
