--- a/index.html
+++ b/index.html
@@ -4,19 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuja's Portfolio</title>
-
-    <link rel="stylesheet" href=""style.css>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- this 8-no link is from boxicon where we get fb twitter insta logo. -->
 </head>
+
 <body>
    <header class="header">
-    <a href="#" class="logo">Jacob.</a>
+    <a href="#" class="logo">MyPortfolio.</a>
     <nav class="navbar">
-        <a href="#">Home</a>
+        <a href="#" class="active">Home</a>
+    <!-- due to class="active",Home is appearing darker. -->
         <a href="#">About</a>
         <a href="#">Portfolio</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </nav>
    </header>
+   <section class="home">
+        <div class="home-content">
+            <h1>Hi, I'm Anuja Thakare</h1>
+            <h3>FullStack Developer</h3>
+            <p>A certified Full Stack Developer with a B.E. in Electrical Engineering.
+            Skilled in front-end technologies (HTML, CSS, JavaScript, React) and back-end (Node.js, Express).
+            Experienced in building responsive web applications and working with RESTful APIs.
+            Eager to contribute to innovative projects with strong problem-solving and technical skills.</p>
+            
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk</a>
+            </div>
+        </div>
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-meta'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+        <span class="home-imgHover"></span>
+   </section>
 </body>
 </html>
